<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_explanation"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:text="@string/settings_explanation"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_explanation">

        <EditText
            android:id="@+id/et_pin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/settings_hint"
            android:inputType="numberPassword"
            android:textSize="@dimen/et_pin_txt_size" />

        <ImageButton
            android:id="@+id/btn_show_pin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="@dimen/img_btn_size"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_visibility" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:text="@string/settings_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>