<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/ll_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/ll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_note_hint"
            android:inputType="text" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_edit_height">

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/et_note_content_hint"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/content_edit_height" />
        </ScrollView>

        <CheckBox
            android:id="@+id/chbx_isdeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/et_note_deadline_hint" />

        <LinearLayout
            android:id="@+id/date_block"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/ibt_calendar"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_calendar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>